# Computergrafik

./: .gitignore
asteriods3d/: CMakeLists.txt  math.h  math.tcc  matrix.cc  matrix.h  matrix_test.cc
asteroids/: Makefile  game.cc  game.h  geometry_test.cc  main_game.cc  math.h  math.tcc  math_test.cc  physics.h  physics.tcc  physics_test.cc  sdl2_game_controller.cc  sdl2_renderer.cc  timer.cc  timer.h
asteroids_3d/: CMakeLists.txt  game.cc  game.h  game_test.cc  geometry_test.cc  main_game.cc  math_test.cc  matrix.cc  opengl_renderer.cc  opengl_renderer.h  physics_test.cc  sound.h  wavefront.cc  wavefront.h
asteroids_3d/sound/: bangLarge.wav:Zone.Identifier
asteroids_opengl/: geometry_test.cc  math.tcc  opengl_renderer.cc  opengl_renderer.h  sdl2_renderer.cc  sdl2_renderer.h
geometry/: Makefile  geometry.h  geometry.tcc  geometry_test.cc  math.tcc  math_test.cc
math/: Makefile
matrix/: .gitignore  math.cc  math.h  matrix.tcc  matrix_test.cc
raytracer/: CMakeLists.txt  Makefile  camera.h  color.h  fileout.h  geometry.cc  geometry.h  geometry.tcc  hitable.h  math.cc  math.h  math.tcc  object.h  parallel.h  raytracer.cc  render.h
viewer/: CMakeCache.txt  CMakeLists.txt  Makefile  asteroid.mtl  basic.mtl  cmake_install.cmake  cube_blender.mtl  icosphere.mtl  saucer.mtl  spaceship.mtl  torpedo.mtl  untitled.mtl  viewer  viewer.cc  wavefront.cc  wavefront.h  wavefront_test  wavefront_test.cc
